# internal/models/models.go
@@ -1,0 +1,17 @@
+package models
+
+import "gorm.io/gorm"
+
+type User struct {
+	gorm.Model
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	Tasks    []Task `json:"tasks" gorm:"foreignkey:UserID"`
+}
+
+type Task struct {
+	gorm.Model
+	Task   string `json:"task"`
+	IsDone bool   `json:"is_done"`
+	UserID uint   `json:"user_id"`
+}
